--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "discordjs-template-ts",
   "description": "A template for discord.js with TypeScript",
-  "version": "14.11.0-0.1.2",
+  "version": "14.14.1-0.1.3",
   "license": "ISC",
   "main": "dist/src/index.js",
   "scripts": {
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "chalk": "4.1.2",
-    "discord.js": "^14.11.0",
+    "discord.js": "^14.14.1",
     "dotenv": "^16.0.3",
+    "fs-extra": "^11.2.0",
     "module-alias": "^2.2.2"
   },
   "_moduleAliases": {
@@ -20,10 +21,14 @@
     "@config": "dist/src/config"
   },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.2.5",
     "cross-env": "^7.0.3",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.0.2",
+    "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.6",
-    "typescript": "^5.0.4"
+    "tsconfig-paths": "^4.2.0",
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.3"
   }
 }
