--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "description": "A template for discord.js with TypeScript",
   "version": "14.14.1-0.1.3",
   "license": "ISC",
-  "main": "dist/src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon",
     "build": "tsc && tsc-alias",
-    "start": "cross-env NODE_ENV=production node ./dist/src/index.js"
+    "start": "cross-env NODE_ENV=production node ./dist/index.js"
   },
   "dependencies": {
     "chalk": "4.1.2",
@@ -17,8 +17,8 @@
     "module-alias": "^2.2.2"
   },
   "_moduleAliases": {
-    "@": "dist/src",
-    "@config": "dist/src/config"
+    "@": "dist",
+    "@config": "dist/config"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
