--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon",
     "build": "tsup && tsc-alias",
-    "start": "cross-env NODE_ENV=production node ./dist/index.js"
+    "start": "cross-env NODE_ENV=production node ./dist/index.js",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "chalk": "4.1.2",
@@ -17,6 +18,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.11.20",
     "cross-env": "^7.0.3",
